[package]
name = "ryo3-aws-lc"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "python + aws-lc crate (https://crates.io/crates/aws-lc-rs)"

[dependencies]
aws-lc-rs.workspace = true
pyo3 = { workspace = true, features = [] }
ryo3-bytes.workspace = true
ryo3-core.workspace = true

[features]
ry = []

[lints]
workspace = true
