[package]
name = "ryo3-brotli"
description = "brotli - wraps brotli (https://crates.io/crates/brotli)"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# rlib type
[lib]
name = "ryo3-brotli"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { workspace = true, features = [] }
brotli = { workspace = true }
ryo3-bytes.workspace = true

[lints]
workspace = true
