[package]
name = "ryo3-brotli"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "brotli - wraps brotli (https://crates.io/crates/brotli)"

[dependencies]
brotli = { workspace = true }
pyo3 = { workspace = true, features = [] }
ryo3-bytes.workspace = true

[lints]
workspace = true
