[package]
name = "ryo3-bytes"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "ryo3 + bytes (https://docs.rs/regex/latest/bytes/)"

[dependencies]
ahash = { workspace = true }
bytes = { workspace = true }
pyo3 = { workspace = true, features = [] }

[features]
default = []
ry = []
multiple-pymethods = ["pyo3/multiple-pymethods"]

[lints]
workspace = true
