[package]
name = "ryo3-bytes"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "ryo3 + bytes (https://docs.rs/bytes/latest/bytes/)"

[dependencies]
ahash = { workspace = true }
bytes = { workspace = true }
memchr = { workspace = true, optional = true }
pyo3 = { workspace = true, features = [] }

[features]
default = ["memchr"]
ry = ["memchr"]
memchr = ["dep:memchr"]

[lints]
workspace = true
