[package]
name = "ryo3-bzip2"
description = "python + bzip2 (https://github.com/alexcrichton/bzip2-rs)"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bzip2 = {workspace = true}
pyo3 = { workspace = true, features = ["experimental-inspect"] }
ryo3-bytes.workspace = true

[lints]
workspace = true
