[package]
name = "ryo3-core"
description = "ryo3-core ~ common/shared utils/tools/things"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyo3 = { workspace = true, features = ["experimental-inspect"] }

[build-dependencies]
pyo3-build-config = {workspace = true}

[lints]
workspace = true
