[package]
name = "ryo3-core"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "ryo3-core ~ common/shared utils/tools/things"

[dependencies]
pyo3 = { workspace = true, features = [] }
ryo3-macro-rules = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true }

[lints]
workspace = true
