[package]
name = "ryo3-dirs"
description = "python + `dirs` crate (https://crates.io/crates/dirs)"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dirs.workspace = true
pyo3 = { workspace = true, features = ["experimental-inspect"] }

[lints]
workspace = true
