[package]
name = "ryo3-dirs"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "python + `dirs` crate (https://crates.io/crates/dirs)"

[dependencies]
dirs.workspace = true
pyo3 = { workspace = true, features = [] }

[lints]
workspace = true
