[package]
name = "ryo3-flate2"
description = "python + flate2 (https://github.com/rust-lang/flate2-rs)"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
flate2 = "1.0.35"
pyo3 = { workspace = true, features = ["experimental-inspect"] }
ryo3-macros.workspace = true

[lints]
workspace = true
