[package]
name = "ryo3-flate2"
description = "python + flate2 (https://github.com/rust-lang/flate2-rs)"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
flate2 = { workspace = true }
pyo3 = { workspace = true, features = [] }
ryo3-bytes.workspace = true
ryo3-macro-rules.workspace = true

[lints]
workspace = true
