[package]
name = "ryo3-fnv"
description = "python + fnv (https://github.com/servo/rust-fnv)"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fnv = { workspace = true }
pyo3 = { workspace = true, features = [] }
ryo3-bytes.workspace = true

[lints]
workspace = true
