[package]
name = "ryo3-fnv"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "python + fnv (https://github.com/servo/rust-fnv)"

[dependencies]
fnv = { workspace = true }
pyo3 = { workspace = true, features = [] }
ryo3-bytes.workspace = true

[lints]
workspace = true
