[package]
name = "ryo3-fnv"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "python + fnv (https://github.com/servo/rust-fnv)"

[dependencies]
pyo3 = { workspace = true, features = [] }
ryo3-bytes.workspace = true
ryo3-core.workspace = true

[features]
default = []
ry = []

[lints]
workspace = true
