[package]
name = "ryo3-fspath"
description = "python + `std::fs::Path(Buf)`"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pyo3 = { workspace = true, features = ["experimental-inspect"] }
ryo3-dirs.workspace = true
ryo3-macros.workspace = true
ryo3-core.workspace = true
ryo3-bytes.workspace = true
same-file = { workspace = true, optional = true }


[lints]
workspace = true

[features]
default = ["same-file"]
same-file = ["dep:same-file"]
