[package]
name = "ryo3-fspath"
description = "python + `std::fs::Path(Buf)`"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pyo3 = { workspace = true, features = [] }
ryo3-dirs.workspace = true
ryo3-macro-rules.workspace = true
ryo3-core.workspace = true
ryo3-bytes.workspace = true
same-file = { workspace = true, optional = true }
ryo3-std.workspace = true
parking_lot.workspace = true
ryo3-which = { workspace = true, optional = true }


[lints]
workspace = true

[features]
default = ["same-file", "which", "which-regex"]
same-file = ["dep:same-file"]
which = ["dep:ryo3-which"]
which-regex = [ "which","ryo3-which/regex"]
