[package]
name = "ryo3-fspath"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "python + `std::fs::Path(Buf)`"

[dependencies]
parking_lot.workspace = true
pyo3 = { workspace = true, features = [] }
ryo3-bytes.workspace = true
ryo3-core.workspace = true
ryo3-dirs.workspace = true
ryo3-std = {workspace = true, features = ["fs"] }
ryo3-which = { workspace = true, optional = true }
same-file = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = []
ry = ["same-file", "which", "which-regex"]
same-file = ["dep:same-file"]
which = [
  "ryo3-which"
]
which-regex = [
  "ryo3-which/regex"
]
