[package]
name = "ryo3-glob"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "python + glob crate (https://crates.io/crates/glob)"

[dependencies]
glob.workspace = true
parking_lot.workspace = true
pyo3.workspace = true
ryo3-fspath.workspace = true

[features]
ry = []

[lints]
workspace = true

