[package]
name = "ryo3-globset"
description = "python + globset (https://docs.rs/globset/latest/globset/)"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
globset.workspace = true
pyo3 = { workspace = true, features = [] }
ryo3-core.workspace = true

[lints]
workspace = true
