[package]
name = "ryo3-globset"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "python + globset (https://docs.rs/globset/latest/globset/)"

[dependencies]
globset.workspace = true
pyo3 = { workspace = true, features = [] }
ryo3-core.workspace = true

[lints]
workspace = true
