[package]
name = "ryo3-heck"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "ryo3-heck - wraps heck (https://crates.io/crates/heck)"

[dependencies]
heck.workspace = true
pyo3 = { workspace = true, features = [] }

[lints]
workspace = true
