[package]
name = "ryo3-http"
description = "python + http (https://docs.rs/http/latest/http/)"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
http.workspace = true
pyo3 = { workspace = true, features = ["experimental-inspect"] }

[build-dependencies]
pyo3-build-config = {workspace = true}

[lints]
workspace = true
