[package]
name = "ryo3-http"
description = "python + http (https://docs.rs/http/latest/http/)"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
http.workspace = true
parking_lot.workspace = true
pyo3 = { workspace = true, features = [] }
ryo3-core.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[build-dependencies]
pyo3-build-config = { workspace = true }

[lints]
workspace = true

[features]
default = ["json"]
serde = ["dep:serde"]
json = ["serde", "serde_json"]
