[package]
name = "ryo3-ignore"
description = "python + ignore (https://docs.rs/ignore/latest/ignore/)"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pyo3 = { workspace = true, features = [] }
ryo3-globset.workspace = true
ryo3-core = { workspace = true }
ryo3-std = { workspace = true }
ignore = { workspace = true }


[lints]
workspace = true
