[package]
name = "ryo3-jiff"
description = "ryo3 + jiff https://github.com/BurntSushi/jiff"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jiff = { version = "0.1.15", features = ["default", "serde"] }
ryo3-std = { workspace = true }
pyo3 = { workspace = true, features = ["experimental-inspect"] }

[build-dependencies]
pyo3-build-config = "0.23.2"

[lints]
workspace = true
