[package]
name = "ryo3-jiff"
description = "ryo3 + jiff https://github.com/BurntSushi/jiff"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ryo3-std = { workspace = true }
pyo3 = { workspace = true, features = ["jiff-02"] }
ryo3-macro-rules.workspace = true
jiff.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
parking_lot.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
pyo3-build-config = { workspace = true }

[features]
default = [
  "serde"
]
serde = [
  "dep:serde",
  "jiff/serde",
]

[lints]
workspace = true
