[package]
name = "ryo3-jiff"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "ryo3 + jiff https://github.com/BurntSushi/jiff"

[dependencies]
jiff.workspace = true
parking_lot.workspace = true
pyo3 = { workspace = true, features = ["jiff-02"] }
ryo3-macro-rules.workspace = true
ryo3-pydantic = { workspace = true, optional = true }
ryo3-std = { workspace = true, features = ["std-time"] }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[build-dependencies]
pyo3-build-config = { workspace = true }

[features]
default = []
ry = [
  "serde",
  "pydantic"
]
pydantic = [
  "ryo3-pydantic",
]
serde = [
  "dep:serde",
  "jiff/serde",
]

[lints]

#extend

workspace = true
