[package]
name = "ryo3-jiter"
description = "ry + pydantic-jiter (https://github.com/pydantic/jiter)"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyo3 = { workspace = true, features = ["experimental-inspect"] }
jiter = { workspace = true, features = ["python"] }

[lints]
workspace = true
