[package]
name = "ryo3-json"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "json ~ rust-python-json"

[dependencies]
pyo3 = { workspace = true, features = [] }
unindent.workspace = true

[lints]
workspace = true
