[package]
name = "ryo3-json"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "json ~ rust-python-json"

[dependencies]
pyo3 = { workspace = true, features = [] }
ryo3-bytes = { workspace = true }
ryo3-serde = { workspace = true }
serde_json.workspace = true

[lints]
workspace = true
