[package]
name = "ryo3-macro-rules"
description = "ryo3-macro-rules ~ macro_rules used by ryo3"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pyo3 = { workspace = true, features = [] }

[lints]
workspace = true
