[package]
name = "ryo3-macro-rules"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "ryo3-macro-rules ~ macro_rules used by ryo3"

[dependencies]
pyo3 = { workspace = true, features = [] }

[lints]
workspace = true
