[package]
name = "ryo3-macros"
description = "ryo3-macros"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pyo3 = { workspace = true, features = ["experimental-inspect"] }

[lints]
workspace = true
