[package]
name = "ryo3-regex"
description = "ryo3 + regex (https://docs.rs/regex/latest/regex/)"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pyo3 = { workspace = true, features = [] }
regex.workspace = true

[lints]
workspace = true
