[package]
name = "ryo3-regex"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "ryo3 + regex (https://docs.rs/regex/latest/regex/)"

[dependencies]
pyo3 = { workspace = true, features = [] }
regex.workspace = true

[features]
ry = []

[lints]
workspace = true
