[package]
name = "ryo3-reqwest"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "python + reqwest (https://docs.rs/reqwest/latest/reqwest/index.html)"

[dependencies]
bytes.workspace = true
cookie = { version = "0.18.1", features = ["percent-encode"] }
futures-core.workspace = true
futures-util.workspace = true
jiter.workspace = true
parking_lot.workspace = true
pyo3 = { workspace = true, features = [
] }
pyo3-async-runtimes.workspace = true
reqwest.workspace = true
ryo3-bytes.workspace = true
ryo3-core.workspace = true
ryo3-http.workspace = true
ryo3-jiter.workspace = true
ryo3-json.workspace = true
ryo3-macro-rules.workspace = true
ryo3-serde.workspace = true
ryo3-std = { workspace = true, features = ["time"] }
ryo3-url.workspace = true
serde.workspace = true
serde_urlencoded = "0.7.1"
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true

[features]
experimental-async = ["pyo3/experimental-async"]
default = []
ry = ["experimental-async"]
# blocking = [
#   "reqwest/blocking",
# ]
