[package]
name = "ryo3-reqwest"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "python + reqwest (https://docs.rs/reqwest/latest/reqwest/index.html)"

[dependencies]
bytes.workspace = true
cookie.workspace = true
futures-channel = { version = "0.3.31", features = ["sink"] }
futures-core.workspace = true
futures-util = { workspace = true, features = ["sink"] }
jiter.workspace = true
parking_lot.workspace = true
pyo3 = { workspace = true, features = [] }
pyo3-async-runtimes = { workspace = true, features = ["unstable-streams"] }
reqwest.workspace = true
rustls = { version = "0.23.36", default-features = false, features = [
  "logging",
  "prefer-post-quantum",
  "std",
  "tls12",
] }
ryo3-bytes.workspace = true
ryo3-core.workspace = true
ryo3-http.workspace = true
ryo3-jiter.workspace = true
ryo3-json.workspace = true
ryo3-macro-rules.workspace = true
ryo3-serde.workspace = true
ryo3-std = { workspace = true, features = ["time"] }
ryo3-url.workspace = true
serde.workspace = true
serde_urlencoded = "0.7.1"
tokio.workspace = true
tokio-stream = "0.1.18"
tracing.workspace = true

[lints]
workspace = true

[features]
default = []
experimental-async = ["pyo3/experimental-async"]
ring = ["rustls/ring"]
aws-lc-rs = ["rustls/aws-lc-rs"]
ry = ["experimental-async"]
