[package]
name = "ryo3-reqwest"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "python + reqwest (https://docs.rs/reqwest/latest/reqwest/index.html)"

[dependencies]
bytes.workspace = true
cookie.workspace = true
encoding_rs = "0.8.35"
futures-core.workspace = true
futures-util = { workspace = true, features = ["sink"] }
jiter.workspace = true
parking_lot.workspace = true
pyo3 = { workspace = true, features = [] }
pyo3-async-runtimes = { workspace = true, features = ["unstable-streams"] }
reqwest = { workspace = true, default-features = false, features = [
  "brotli",
  "charset",
  "cookies",
  "deflate",
  "form",
  "gzip",
  "hickory-dns",
  "http2",
  "json",
  "multipart",
  "query",
  "rustls-no-provider",
  "socks",
  "stream",
  "zstd",
] }
rustls = { workspace = true, features = [
  "logging",
  "prefer-post-quantum",
  "std",
  "tls12",
] }
rustls-native-certs = "0.8.3"
ryo3-bytes.workspace = true
ryo3-core.workspace = true
ryo3-http.workspace = true
ryo3-jiter.workspace = true
ryo3-json.workspace = true
ryo3-macro-rules.workspace = true
ryo3-serde.workspace = true
ryo3-std = { workspace = true, features = ["time"] }
ryo3-url.workspace = true
serde.workspace = true
serde_urlencoded.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true

[features]
default = []
experimental-async = ["pyo3/experimental-async"]
ring = ["rustls/ring"]
aws-lc-rs = ["rustls/aws-lc-rs"]
ry = []
